--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.4",
+    "@types/jquery": "^3.5.30",
     "astro": "^4.8.6",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
