--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
     "@fontsource-variable/onest": "^5.0.4",
     "@types/jquery": "^3.5.30",
     "astro": "^4.8.6",
