--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/vercel": "^7.6.0",
     "@fontsource-variable/onest": "^5.0.4",
     "@types/jquery": "^3.5.30",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.11",
     "astro": "^4.8.6",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
