--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "split-type": "^0.3.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
